crates/uitest/fixtures/ty_check/payable_on_msg_variant.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_msg_variant.fe
---
error[12-0001]: unsupported `#[payable]` attribute on msg variant `Ping`
  ┌─ payable_on_msg_variant.fe:2:5
  │
2 │     #[payable]
  │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms
